test/langtools/tools/javac/SuperInit/EarlyAssignmentNoPreview3.out
EarlyAssignmentNoPreview3.java:12:39: compiler.err.preview.feature.disabled: (compiler.misc.feature.flexible.constructors)
1 error
